--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#fff</color>
-    <color name="gray">#c1c1c1</color>
+    <color name="gray">#c8c8c8</color>
+    <color name="dangerous">#850B0B</color>
 </resources>
